# task3-Stream

./: .gitignore  CMakeLists.txt  Stream.cpp  externalGoogleTest.cmake
Test/: CMakeLists.txt  StreamTest.cpp
src/: CMakeLists.txt  Stream.hpp
